--- a/Using Strict in JS/Strict.html
+++ b/Using Strict in JS/Strict.html
@@ -7,7 +7,7 @@
     <h1>My Assignments!</h1>
 
     <!-- Linking the external JavaScript file -->
-    <script src="ExplicitConversion.js"></script>
+    <script src="Strict.js"></script>
 
 </body>
 </html>
