--- a/Function Calling in JS/function.html
+++ b/Function Calling in JS/function.html
@@ -7,7 +7,7 @@
     <h1>My Assignments!</h1>
 
     <!-- Linking the external JavaScript file -->
-    <script src="ExplicitConversion.js"></script>
+    <script src="function.js"></script>
 
 </body>
 </html>
